tests/paczka1/small_fuzzy/64634875.err
Error in line 2: 7AN1f9VBzzF S941 36,8
Error in line 3: W4jVKZLP2k S629 32,5
